--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.datasource.username=admin
 spring.datasource.password=
 spring.h2.console.path=/h2
 
+#H2 Console settings
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+
 
 spring.jpa.dafer-datasource-initialization=true
 spring.h2.console.enabled=true
