--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.jpa.dafer-datasource-initialization=true
 spring.datasource.url=jdbc:h2:mem:vencer
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.username=admin
-spring.datasource.password=
+spring.datasource.username=sa
+#spring.datasource.password=
 spring.h2.console.path=/h2
 
 #H2 Console settings
